# rsvp-tui

./: .gitignore  .gitnexusignore  AGENTS.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  ENHANCEMENTS.md  GEMINI.md  Guia Estratégico_ Maestria em Documentação via Terminal – Do Vanilla ao Ecossistema Moderno (1).md  Makefile  PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TUI_FEATURES.md  WORKFLOW.md  demo_tui.py  launch_rsvp.py  note_demo.py  pyproject.toml  rspv.bat  rspv.py  sample_book.md  skiming scanning RSPV.md  test_demo.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.gitnexus/: lbug  lbug.wal
docs/: README.docs_index.md  SPEC.algorithms.md  SPEC.component_design.md  SPEC.data_architecture.md  SPEC.requirements_traceability.md  SPEC.three_modes.md
man/: rsvp.1
rsvp-cli/: Cargo.toml
rsvp-cli/src/: config.rs  main.rs  output.rs  reader.rs
rsvp-cli/src/commands/: doctor.rs  help.rs  import.rs  library.rs  mod.rs  remove.rs  stats.rs  tasks.rs  themes.rs  version.rs  where_cmd.rs
rsvp-core/: Cargo.toml  README.md  pyproject.toml
rsvp-core/src/: errors.rs  file_parser.rs  lib.rs  rsvp_core.rs  rsvp_engine.rs  text_engine.rs  word_stats.rs
rsvp-core/tests/: test_rsvp_core.rs  test_text_engine.rs
rsvp-tui/: README.md  pyproject.toml
rsvp-tui/.gitnexus/: lbug  lbug.wal
rsvp-tui/rsvp_tui/: __init__.py  __main__.py  app.py  app_complete.py  cli.py  fallbacks.py  keybindings.py  logging_.py  models.py  themes.py  util.py
rsvp-tui/rsvp_tui/figures/: __init__.py  base.py  bionic.py  chunk.py  horizontal.py  line.py  minimap.py  pacer.py  registry.py  spritz.py  stats.py  word.py
rsvp-tui/rsvp_tui/managers/: __init__.py  config_manager.py  library_manager.py  note_manager.py
rsvp-tui/rsvp_tui/screens/: __init__.py  base.py  command_palette.py  figure_picker.py  file_explorer.py  library_screen.py  messages.py  reader_screen.py  settings_screen.py
rsvp-tui/rsvp_tui/widgets/: __init__.py  library_view.py  navigation_panel.py  note_panel.py  progress_bar.py  reader_display.py  settings_panel.py
rsvp-tui/tests/: conftest.py  test_cli_aliases.py  test_fallbacks.py  test_figure_switching.py  test_figures.py  test_keybindings.py  test_logic.py  test_managers.py  test_models.py  test_review_fixes.py  test_screens.py  test_settings_screen.py  test_themes.py  test_util.py
rsvp_workspace/: __init__.py
scripts/: __init__.py  _lib.py  _man_template.py  bench.py  build.py  clean.py  cli_dispatch.py  demo.py  docs.py  doctor.py  format.py  lint.py  man.py  palette.py  run.py  sync.py  tasks.py  test.py  typecheck.py  verify.py
