[package]
name = "rsvp-core"
version = "0.1.0"
edition = "2021"
authors = ["RSVP Team"]
description = "High-performance RSVP speed reader core library in Rust"
license = "MIT"
repository = "https://github.com/yourusername/rsvp-tui"

[lib]
name = "rsvp_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-log = "0.8"

# Text processing
regex = "1.10"
unicode-segmentation = "1.11"
once_cell = "1.19"

# File parsing
epub = "2.1"
html2text = "0.12"

# PDF parsing - choose one:
# pdf-extract = "0.7"
# poppler = "0.5"
lopdf = { version = "0.32", optional = true }

# Markdown parsing
pulldown-cmark = { version = "0.9", optional = true }
pulldown-cmark-to-cmark = { version = "22.0", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[features]
default = ["markdown", "pdf"]
markdown = ["pulldown-cmark", "pulldown-cmark-to-cmark"]
pdf = ["lopdf"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
pretty_assertions = "1.4"

# Bench targets are declared in benches/ when the bench files
# exist. They are commented out until text_engine_bench.rs and
# rsvp_core_bench.rs are added — leaving empty [[bench]]
# entries makes cargo fail to build the lib.
# [[bench]]
# name = "text_engine_bench"
# harness = false
#
# [[bench]]
# name = "rsvp_core_bench"
# harness = false
